<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="emailModel"
            type="ViewModels.LoginViewModels"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_login"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ExtraText">
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="20dp"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:gravity="center_horizontal"/>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_logos"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            app:binding="@{emailModel.emailUI}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--
                    <EditText
                        android:id="@+id/email_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        app:errorEnabled="true"
                        android:inputType="textEmailAddress"/>

-->
                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/accion_sign_in"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:backgroundTint="?attr/colorButtonNormal"
                        android:background="@drawable/borde_redondo"
                        android:onClick="@{emailModel::onClick}"/>

                    <Button
                        android:id="@+id/google_singIn_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/borde_redondo"
                        android:drawableLeft="@mipmap/google_log_in"
                        android:text="@string/account_google"
                        android:textColor="@color/white"
                        android:textStyle="bold">


                    </Button>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/tecnm"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:gravity="center_horizontal" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>
    <!--
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>*/
    -->
</layout>
